- fix scrollbar error on packages page

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -3,7 +3,8 @@ main {
 }
 
 main::-webkit-scrollbar {
-  display: none;
+  width: 0;
+  background: transparent;
 }
 
 .background {
